Fix users PATCH: username is not part of the request